# Temporal-Serverless

baseimage/: Dockerfile  requirements.txt
demo/: asdf.py  greet.py  pyproject.toml  tsm.yaml
tsm/: pyproject.toml
tsm/tsm/: Dockerfile  config.py  function.py  function.template.py  main.py
